fix https://github.com/yulichang/mybatis-plus-join/issues/65